budgetwarrior 0.4.3 - in development
 * Compute the savings rate
 * Add support for savings rate objectives
 * Add support for tracking asset values
 * Auto-completion when possible with UP and DOWN

budgetwarrior 0.4.2 - 14.09.2017
 * New command: summary for a global view
 * Improved fortune reports
 * Disable balance over years (can be changed with option)
 * Display more information in overview month
 * No more need for month start in config
 * Graph report by account
 * Bug Fix: report was not displaying the first month
 * Add transfer command in module account
 * Fix accuracies
 * Review of the recurrings (less merge conflicts)
 * Refactorings
 * Reviewed the build system
 * Improved Windows support

budgetwarrior 0.4.1.2 - 24.09.2014
 * Fix important bug with overview

budgetwarrior 0.4.1.1 - 22.09.2014
 * Fix makefile

budgetwarrior 0.4.1 - 21.09.2014
 * Support for expense template to create common expenses faster
 * Support for merging accounts together
 * Simple prediction command
 * No more Boost dependency
 * Display mean accuracy in budget wish list
 * Command gc make all IDs contiguous
 * Bugfix: The scale of the budget report was not displayed correctly

budgetwarrior 0.4.0 - 04.07.2014
 * New version command to display the current version of the tool
 * New overview aggregate month command to display aggregate expenses of a month
 * Add importance and urgency fields to wish
 * Compute estimation accuracy in wish list
 * Support for aliases: budget sync -> budget versioning sync and budget aggregate -> budget overview aggregate
 * Support for option --full in overview aggregate to aggregate accounts too
 * Support for option --no-group in overview aggregate to disable grouping
 * Support for option --separator in overview aggregate to change the grouping char
 * All overview aggregate options can also be set in the configuration file
 * More information are displayed on objective status
 * New versioning commands: status, push, pull